--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://im.dahoo.wang
+## url: http://im.dahoo.wang
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
